again update code

--- a/index.html
+++ b/index.html
@@ -1002,10 +1002,10 @@
                         <p class="player-weight">Weight Class: -70kg</p>
                         <p>National Champion 2022, with 5 years of competitive experience.</p>
                         <div class="challenge-btns">
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Ali%20Khan%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Ali%20Khan%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Ali%20Khan%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Ali%20Khan%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20HASSAN%20Khan%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20HASSAN%20Khan%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20HASSAN%20Khan%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20HASSAN%20Khan%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
                         </div>
                     </div>
                 </div>
