again update the weight assignment

--- a/index.html
+++ b/index.html
@@ -1020,10 +1020,10 @@
                         <p class="player-weight">Weight Class: -80kg</p>
                         <p>International competitor, known for his explosive power and technique.</p>
                         <div class="challenge-btns">
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Bilal%20Ahmed%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Bilal%20Ahmed%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Bilal%20Ahmed%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Bilal%20Ahmed%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20TAHIR%20ALI%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20TAHIR%20ALI%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20TAHIR%20ALI%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20TAHIR%20ALI%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
                         </div>
                     </div>
                 </div>
@@ -1038,10 +1038,10 @@
                         <p class="player-weight">Weight Class: -70kg</p>
                         <p>Rising star with multiple regional titles and exceptional technique.</p>
                         <div class="challenge-btns">
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Zain%20Malik%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Zain%20Malik%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Zain%20Malik%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Zain%20Malik%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20HAMEED%20KHAN%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20HAMEED%20KHAN%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20HAMEED%20KHAN%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20HAMEED%20KHAN%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
                         </div>
                     </div>
                 </div>
@@ -1055,10 +1055,10 @@
                         <p class="player-weight">Weight Class: -80kg</p>
                         <p>National Champion 2022, with 5 years of competitive experience.</p>
                         <div class="challenge-btns">
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Ali%20Khan%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Ali%20Khan%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Ali%20Khan%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Ali%20Khan%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20UMAR%20MUSTAFA%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20UMAR%20MUSTAFA%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20UMAR%20MUSTAFA%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20UMAR%20MUSTAFA%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
                         </div>
                     </div>
                 </div>
@@ -1073,10 +1073,10 @@
                         <p class="player-weight">Weight Class: -80kg</p>
                         <p>International competitor, known for his explosive power and technique.</p>
                         <div class="challenge-btns">
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Bilal%20Ahmed%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Bilal%20Ahmed%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Bilal%20Ahmed%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Bilal%20Ahmed%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20WAJID%20KHAN%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20WAJID%20KHAN%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20WAJID%20KHAN%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20WAJID%20KHAN%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
                         </div>
                     </div>
                 </div>
@@ -1091,10 +1091,10 @@
                         <p class="player-weight">Weight Class: -70kg</p>
                         <p>Rising star with multiple regional titles and exceptional technique.</p>
                         <div class="challenge-btns">
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Zain%20Malik%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Zain%20Malik%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Zain%20Malik%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Zain%20Malik%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20HUSSAIN%20ALI%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20HUSSAIN%20ALI%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20HUSSAIN%20ALI%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20HUSSAIN%20ALI%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
                         </div>
                     </div>
                 </div>
@@ -1108,10 +1108,10 @@
                         <p class="player-weight">Weight Class: -90kg</p>
                         <p>Rising star with multiple regional titles and exceptional technique.</p>
                         <div class="challenge-btns">
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Zain%20Malik%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Zain%20Malik%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Zain%20Malik%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
-                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20Zain%20Malik%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20SYED%20AAQIB%20in%20-70kg%20category." class="btn btn-small">-70kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20SYED%20AAQIB%20in%20-80kg%20category." class="btn btn-small">-80kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20SYED%20AAQIB%20in%20-90kg%20category." class="btn btn-small">-90kg</a>
+                            <a href="https://wa.me/923173916773?text=I%20want%20to%20challenge%20SYED%20AAQIB%20in%20Open%20Weight%20category." class="btn btn-small">Open Weight</a>
                         </div>
                     </div>
                 </div>
