--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restighten Armwrestling Team - Hyderabad</title>
+    <title>HYDERABAD WRIST TITANS Armwrestling Team</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <style>
@@ -20,6 +20,7 @@
             --text-dark: #000000;
             --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             --transition: all 0.3s ease;
+            --LIGHT: rgb(230, 230, 230);
         }
 
         /* Base Styles */
@@ -273,7 +274,7 @@
 
         /* About Section */
         .about {
-            background-color: var(--light);
+            background-color: var(--LIGHT);
         }
 
         .about-content {
@@ -960,7 +961,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Strength, Discipline, Unity</h1>
-                <p>Hyderabad's Premier Armwrestling Team - Building Champions Since 2018</p>
+                <p>Hyderabad's Premier Armwrestling Team - Building Champions Since 2023</p>
                 <div class="hero-btns">
                     <a href="#contact" class="btn">Join Our Team</a>
                     <a href="#challenge" class="btn btn-outline">Book Challenge Match</a>
@@ -1370,28 +1371,28 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Address</h4>
-                            <p>Hyderabad, Pakistan</p>
+                            <p><a href="https://maps.app.goo.gl/GBdKSECyWAamXWFW9" target="_blank">📍 Match Location (Open in Google Maps)</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h4>Phone</h4>
-                            <p>+92 317 3916773</p>
+                            <p><a href="https://wa.me/923173916773?text=Hello%20I%20want%20to%20contact%20you" target="_blank">Contact on WhatsApp</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>info@restighten.com</p>
+                            <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=hyderabadwristtitans@gmail.com" target="_blank">Message on Gmail</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-clock"></i>
                         <div>
                             <h4>Training Hours</h4>
-                            <p>Monday - Saturday: 5 PM - 9 PM</p>
+                            <p>Monday to  Friday : 5 PM - 9 PM</p>
                         </div>
                     </div>
                     <div class="social-links">
@@ -1460,7 +1461,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 Restighten Armwrestling Team - Hyderabad. All rights reserved.</p>
+                <p>&copy; 2023 HYDERABAD WRIST TITANS Armwrestling Team - Hyderabad. All rights reserved.</p>
             </div>
         </div>
     </footer>
